--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 <p class='h6'><b>Text</b></p>
             </div>     
             <div class='row' style='margin-top: 0px; margin-bottom: -10px; margin-left: 4px;'>
-                <p class='h7'>TSo the children went to work with great alacrity, and put the playthings all away.</p>
+                <p class='h7'>So the children went to work with great alacrity, and put the playthings all away.</p>
             </div>             
                 <div style='width: 450px; height:60px; margin-bottom: 10px;'>
                     <div class='row' style='width: 280px; height:20px; '>
@@ -638,7 +638,7 @@
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 280px; height: 50px;'>
-                                <source src="./assets/prosody/1_1_t2t_ref.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                                <source src="./assets/prosody/1_1_t2t_ref1.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
                             </audio>
                         </div>
                     </div>
@@ -650,7 +650,7 @@
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 280px; height: 50px;'>
-                                <source src="./assets/prosody/1_1_gen.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                                <source src="./assets/prosody/1_1_gen1.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
                             </audio>
                         </div>
                     </div>
@@ -663,7 +663,7 @@
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 280px; height: 50px;'>
-                                <source src="./assets/ref_sentence1/ref2.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                                <source src="./assets/prosody/1_1_t2t_ref2.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
                             </audio>
                         </div>
                     </div>
@@ -675,7 +675,7 @@
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 280px; height: 50px;'>
-                                <source src="./assets/ref_sentence1/gen2.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                                <source src="./assets/prosody/1_1_gen2.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
                             </audio>
                         </div>
                     </div>
